<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/historyTextView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            android:gravity="center|end"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/white"
            android:gravity="center|end"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="60sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/acButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/ac"
            android:textColor="@color/purple_200"
            android:textSize="30sp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/delete"
            android:textColor="@color/purple_200"
            android:textSize="30sp" />

        <Button
            android:id="@+id/divisionButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/division"
            android:textColor="@color/purple_200"
            android:textSize="30sp" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/multiply"
            android:textColor="@color/purple_200"
            android:textSize="30sp" />

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/subtractionButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/subtraction"
            android:textColor="@color/purple_200"
            android:textSize="30sp" />

        <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/additionButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/addition"
            android:textColor="@color/purple_200"
            android:textSize="30sp" />

        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/equalButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/purple_200"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/dotButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/zeroButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>